--- a/frontend/src/components/css/CreatePalettePage.css
+++ b/frontend/src/components/css/CreatePalettePage.css
@@ -7,6 +7,7 @@
 
 .color-input label {
   margin-right: 10px;
+  width: 75px;
 }
 
 .color-input label .labelExample {
@@ -67,4 +68,8 @@
 
 .labelExample {
   color: grey;
+}
+
+.palette-output {
+  margin-right: 20px;
 }
