--- a/frontend/src/components/css/Header.css
+++ b/frontend/src/components/css/Header.css
@@ -4,7 +4,7 @@ header {
   background-color: #343a40;
   color: white;
   padding: 10px 0;
-  position: relative; /* Ensure it doesn't stay fixed */
-  top: 0; /* Align to the top */
-  margin: 0; /* Remove any default margin */
+  position: relative;
+  top: 0;
+  margin: 0;
 }
