--- a/frontend/src/components/css/LandingPage.css
+++ b/frontend/src/components/css/LandingPage.css
@@ -1,6 +1,5 @@
-/* LandingPage.css */
 .landing-header {
-    margin-top: 60px; /* Add some top margin for spacing */
+    margin-top: 60px;
 }
 
 .landing-header h2 {
