--- a/frontend/src/components/css/CreatePalettePage.css
+++ b/frontend/src/components/css/CreatePalettePage.css
@@ -1,4 +1,3 @@
-/* CreatePalettePage.css */
 .color-input {
   display: flex;
   align-items: center;
@@ -35,7 +34,7 @@
 }
 
 .generated-colors {
-  margin-top: 10px; /* Added margin to ensure separation from the title */
+  margin-top: 10px;
 }
 
 .add-color-btn {
@@ -45,7 +44,7 @@
   font-weight: bold;
   cursor: pointer;
   display: block;
-  margin-top: 10px; /* Same margin as between color input elements */
+  margin-top: 10px;
 }
 
 .explanation pre {
@@ -76,4 +75,30 @@
 
 .default-colors .color-output-batch {
   width: 1080px;
+}
+
+.image-upload {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  height: 270px;
+}
+
+.image-upload input {
+  margin-bottom: 10px;
+}
+
+.image-container {
+  display: flex;
+  align-items: flex-start;
+  height: 100%;
+  width: 100%;
+  height: 300px;
+}
+
+.image-upload img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  align-self: flex-start;
 }
