--- a/frontend/src/components/css/ColorOutput.css
+++ b/frontend/src/components/css/ColorOutput.css
@@ -2,8 +2,9 @@
   display: flex;
   align-items: center;
   margin-bottom: 10px;
-  margin-right: 10px;
   width: 160px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .color-box {
