--- a/frontend/src/components/css/Header.css
+++ b/frontend/src/components/css/Header.css
@@ -7,3 +7,21 @@ header {
   top: 0;
   margin: 0;
 }
+
+.header-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* .header-title {
+  font-size: 1.5rem;
+  margin: 0;
+} */
+
+.header-nav .btn {
+  font-size: 1rem;
+  padding: 0.5em 1em;
+  border-radius: 4px;
+  text-align: center;
+}
